--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "flowbite": "^1.8.1",
     "pinia": "^2.1.6",
+    "typed.js": "^2.0.16",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -25,10 +27,13 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.46.0",
     "eslint-plugin-vue": "^9.16.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.29",
     "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.8"
